# untitled_bandit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
assets/: alphabet.txt  desc.txt  false_win.txt  floor_complete.txt  main_menu.txt  puzzle_title.txt  puzzles.txt  win.txt
src/: attacks.rs  datum.rs  death.txt  entity.rs  lib.rs  main.rs  main_menu.txt  map_gen.rs  puzzle_loader.rs  save_file.rs  templates.rs  tile_presets.rs  ui.rs
src/attacks/: damage.rs
src/map_gen/: bandit_gen.rs
src/puzzle_loader/: pzl_save.rs  ts.rs
src/templates/: metadata.rs
src/ui/: widgets.rs
src/ui/widgets/: multi_box.rs  title.rs
