[package]
name = "untitled_bandit"
version = "0.7.4-alpha2"
edition = "2024"

[dependencies]
rect = { git = "https://github.com/That-H/rect", tag = "0.2.0" }
bandit = { git = "https://github.com/That-H/bandit", tag = "0.4.2", features = [] }
crossterm = "0.29.0"
rand = "0.9.2"
paste = "1.0.15"
md5 = "0.8.0"
dyn-clone = "1.0.20"

